* Add cropper, still crossorigin issues.

--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,6 @@ body {
     width: 88%;
     position:fixed;
 }
+#cropper-image {
+
+}
